# plot3d-sokol

./: build.lhelper  meson.build  plot3d-test.c  plot3d-x86-64.lhelper  plot3d.glsl  sokol_gfx.c
